--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,10 +5,10 @@ android {
     buildToolsVersion "22.0.1"
 
     defaultConfig {
-        applicationId "In.shape"
+        applicationId "com.in.shape"
         minSdkVersion 9
         targetSdkVersion 22
-        versionCode 1
+        versionCode 2
         versionName "1.0"
     }
 
